--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,40 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>JsRojektiV2</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>jsRojektiV2</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css"/>
+    <script
+            src="https://code.jquery.com/jquery-3.1.1.min.js"
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
 </head>
 <body>
+    <div id="numbers" class="numbers">
+        <!-- func selct -->
+        <div>
+            <select title="Function" class="form-control" id="seleBox" onchange="selectChanged()">
+            </select>
+        </div>
+        <br/>
+        <form id="inputs" class="form-horizontal">
+        </form>
+    </div>
+
+    <div id="output-div" class="col-sm-5 col-centered">
+        <textarea title="Output" class="form-control" id="output" rows="9" cols="24" readonly></textarea>
+        <button class="btn btn-success" onclick="eval()">=</button>
+        <button class="btn btn-danger" onclick="sclear()">C</button>
+    </div>
+
+    <script src="js.js"></script>
 </body>
+</html>
