--- a/www/index.html
+++ b/www/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css"/>
-    <script
-            src="https://code.jquery.com/jquery-3.1.1.min.js"
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
     <!-- Latest compiled and minified JavaScript -->
@@ -30,7 +29,7 @@
     </div>
 
     <div id="output-div" class="col-sm-5 col-centered">
-        <textarea title="Output" class="form-control" id="output" rows="9" cols="24" readonly></textarea>
+        <textarea title="Output" class="form-control no-resize" id="output" rows="9" cols="24" readonly></textarea>
         <button class="btn btn-success" onclick="eval()">=</button>
         <button class="btn btn-danger" onclick="sclear()">C</button>
     </div>
