--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,55 @@
         <button class="btn btn-danger" onclick="sclear()">C</button>
     </div>
 
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+        
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Lisää kaava</h4>
+            </div>
+            <div class="modal-body">
+              <!-- This is where the inputs come -->
+              <form id="modal-inputs form-horizontal">
+
+                    <div id="minputs-body">
+                        <div id="minputs">
+                            <div class="form-group form-inline form-group-sm">
+                                <input placeholder="Lyhenne" class="form-control"></input> 
+                                <input placeholder="Vakio arvo" class="form-control"></input> 
+                                <input placeholder="Yksikkö" class="form-control""></input>
+                                <button type="button" class="btn btn-default btn-sm" onclick="removeInputs()">-</button>
+                            </div> 
+                        </div>
+
+                        <div class="form-group">
+                            <button type="button" class="btn btn-default btn-block btn-sm" onclick="addInputs()">+</button>
+                        </div>
+                    </div>
+
+                    <div class="form-group form-group-sm">
+                    <textarea placeholder="Kaava" class="form-control" style="resize: none;"></textarea>
+                    </div>
+
+                    <div class="form-group form-inline form-group-sm">
+                    <input placeholder="Kaavan nimi" class="form-control"></input> <input placeholder="Ryhmä" class="form-control"></input> <input placeholder="Tulos yksikkö" class="form-control"></input>
+                    </div>
+
+              </form>
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+          
+        </div>
+    </div>
+
+    <script scr="ui.js"></script>
     <script src="js.js"></script>
 </body>
 </html>
