--- a/www/index.html
+++ b/www/index.html
@@ -65,6 +65,14 @@
                         <div class="form-group">
                             <button type="button" class="btn btn-default btn-block btn-sm" onclick="addInputs()">+</button>
                         </div>
+
+                        <div id="inputs-template" class="form-group form-inline form-group-sm hide">
+                                <input placeholder="Lyhenne" class="form-control">
+                                <input placeholder="Vakio arvo" class="form-control">
+                                <input placeholder="Yksikkö" class="form-control">
+                                <button type="button" class="btn btn-default btn-sm" onclick="removeInputs(this)">-</button>
+                        </div>
+
                     </div>
 
                     <div class="form-group form-group-sm">
